--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@redux-devtools/extension": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2"
   }
 }
